--- a/01 - Android/app/src/main/res/values/strings.xml
+++ b/01 - Android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MovilesComputacion2023A</string>
+    <string name="bienvenida">Bienvenida</string>
 </resources>
