--- a/01 - Android/app/src/main/res/values-es/strings.xml
+++ b/01 - Android/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="bienvenida">Bienvenida LAND</string>
+    <string name="app_name">MovilesComputacion2023A</string>
 </resources>
