--- a/01 - Android/app/src/main/res/values/strings.xml
+++ b/01 - Android/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
         <item>Martes</item>
         <item>Miercoles</item>
     </string-array>
+    <string name="title_activity_cintent_explicito_parametros">CIntentExplicitoParametros</string>
 </resources>
